# my-argparse

./: .gitignore  BUILD.bazel  CMakeLists.txt  LICENSE  WORKSPACE.bazel  test_main.cc
.github/workflows/: main.yml
argparse/: argparse-argument-error.h  argparse-builder.cc  argparse-builder.h  argparse-builder_test.cc  argparse-conversion-result.h  argparse-conversion-result_test.cc  argparse-open-mode.cc  argparse-open-mode.h  argparse-traits.cc  argparse-traits.h  argparse.cc  argparse.h
argparse/internal/: argparse-any.h  argparse-any_test.cc  argparse-arg-array.h  argparse-argp-parser.cc  argparse-argp-parser.h  argparse-argument-builder.cc  argparse-argument-builder.h  argparse-argument-container.cc  argparse-argument-container.h  argparse-argument-controller.cc  argparse-argument-controller.h  argparse-argument-holder.cc  argparse-argument-holder.h  argparse-argument-parser.cc  argparse-argument-parser.h  argparse-argument.cc  argparse-argument.h  argparse-default-parser.cc  argparse-default-parser.h  argparse-gflags-parser.cc  argparse-gflags-parser.h  argparse-info.cc  argparse-info.h  argparse-internal.cc  argparse-internal.h  argparse-logging.cc  argparse-logging.h  argparse-numeric-parser.h  argparse-opaque-ptr.h  argparse-opaque-ptr_test.cc  argparse-open-traits.cc  argparse-open-traits.h  argparse-operations.h  argparse-ops-result.h  argparse-option-key.h  argparse-parse-basic-types_test.cc  argparse-parse-traits.h  argparse-parse-traits_test.cc  argparse-port.cc  argparse-port.h  (+5 more)
example/: BUILD.bazel  example-gflags-parser.cc
include/argparse/: argparse-arg-array.h  argparse-base.h  argparse-builder.h  argparse-conversion-result.h  argparse-holder.h  argparse-open-mode.h  argparse-ops.h  argparse-parser.h  argparse-public.h  argparse-result.h  argparse-traits.h  argparse-utils.h  argparse.h
include/argparse/internal/: _comments.h  argparse-any.h  argparse-argp-parser.h  argparse-gflags-parser.h  argparse-info.h  argparse-internal.h  argparse-numeric-parser.h  argparse-opaque-ptr.h  argparse-operations.h  argparse-port.h  argparse-result.h  argparse-utils.h
src/: argparse-argp-parser.cc  argparse-gflags-parser.cc  argparse-holder.cc  argparse-info.cc  argparse-internal.cc  argparse-open-mode.cc  argparse-ops.cc  argparse-public.cc  argparse-traits.cc  argparse-utils.cc  argparse.cc  gnu_argp_parser.cc
src/argparse/: argparse.cc  argparse.h
src/argparse/arg/: arg.cc  argument.h  argument_factory.h  argument_factory_impl.h  argument_impl.cc  argument_impl.h  info.h  info_impl.cc  info_impl.h  sub_command.h  sub_command_impl.cc  sub_command_impl.h
src/argparse/base/: any.h  arg_array.h  argument_error.h  common.cc  common.h  dest_ptr.h  result.h  string_view.cc  string_view.h
src/argparse/ops/: append_ops.h  format_ops.h  open_ops.cc  open_ops.h  operations.h  operations_impl.h  opsfwd.h  parse_ops.h  typehint_ops.h
src/argparse/parser/: argument_controller.h  argument_controller_impl.cc  argument_controller_impl.h  parser.h
test/: argparse-any_test.cc  argparse-builder_test.cc  argparse-implicit-ctor_test.cc  argparse-opaque-ptr_test.cc  argparse-ops_test.cc  argparse-result_test.cc  argparse-test-helper.h  argparse-utils_test.cc
