# Copyright (c) 2020 Feng Cong
# 
# This software is released under the MIT License.
# https://opensource.org/licenses/MIT

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test", "cc_binary")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

# config_setting(
#     name = "has_gflags",
#     values = {"define": "gflags=1"},
# )

# config_setting(
#     name = "has_absl",
#     values = {"define": "absl=1"},
# )

cc_library(
    name = "argparse",
    srcs = [
        "argparse/argparse.cc",
        "argparse/argparse-open-mode.cc",
        "argparse/internal/argparse-internal.cc",
        "argparse/internal/argparse-gflags-parser.cc",
        "argparse/internal/argparse-argp-parser.cc",
        "argparse/internal/argparse-info.cc",
        "argparse/internal/argparse-argument-builder.cc",
    ],
    hdrs = [
        "argparse/internal/argparse-any.h",
        "argparse/internal/argparse-arg-array.h",
        "argparse/internal/argparse-argp-parser.h",
        "argparse/internal/argparse-gflags-parser.h",
        "argparse/internal/argparse-info.h",
        "argparse/internal/argparse-internal.h",
        "argparse/internal/argparse-ops-result.h",
        "argparse/internal/argparse-numeric-parser.h",
        "argparse/internal/argparse-opaque-ptr.h",
        "argparse/internal/argparse-operations.h",
        "argparse/internal/argparse-port.h",
        "argparse/internal/argparse-argument-builder.h",
        "argparse/argparse-open-mode.h",
        "argparse/argparse-builder.h",
        "argparse/argparse-conversion-result.h",
        "argparse/argparse-traits.h",
        "argparse/argparse.h",
    ],
    includes = [
        "include/",
    ],
    deps = [
        "@com_google_absl//absl/meta:type_traits",
        "@com_google_absl//absl/utility",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/strings",
        "@gflags//:gflags",
    ]
    # deps = select({
    #     ":has_absl": [
    #     ],
    #     ":has_gflags": [
    #     ],
    #     "//conditions:default": [],
    # }),
)

cc_test(
    name  = "argparse_test",
    size = "small",
    srcs = [
        "argparse/argparse-builder_test.cc",
        "argparse/argparse-test-helper.h",
        "argparse/argparse-conversion-result_test.cc",
        "argparse/internal/argparse-opaque-ptr_test.cc",
    ],
    linkstatic = 0,
    deps = [
        ":argparse",
        "@gtest//:gtest_main",
    ]
)

cc_binary(
    name = "test_main",
    srcs = ["test_main.cc"],
    deps = [":argparse"],
)
