# Copyright (c) 2020 Feng Cong
# 
# This software is released under the MIT License.
# https://opensource.org/licenses/MIT

workspace(name = "cgsdfc_argparse")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Gflags
http_archive(
     name = "gflags",
     urls = ["https://github.com/gflags/gflags/archive/master.zip"],
     strip_prefix = "gflags-master",
)

# GTest
http_archive(
     name = "gtest",
     urls = ["https://github.com/google/googletest/archive/master.zip"],
     strip_prefix = "googletest-master",
)

# Abseil
http_archive(
     name = "com_google_absl",
     urls = ["https://github.com/abseil/abseil-cpp/archive/master.zip"],
     strip_prefix = "abseil-cpp-master",
)

http_archive(
    name = "rules_cc",
    strip_prefix = "rules_cc-master",
    urls = ["https://github.com/bazelbuild/rules_cc/archive/master.zip"],
)

http_archive(
    name = "rules_python",
    strip_prefix = "rules_python-master",
    urls = ["https://github.com/bazelbuild/rules_python/archive/master.zip"],
)
